CAUTION. SplitText styling: added float left to words split to prevent inconsistent spacing bug, keep an eye on it, it might cause tiny jumps on page transitions based on devices and their font units rendering

--- a/src/styles/views/_main.scss
+++ b/src/styles/views/_main.scss
@@ -127,17 +127,6 @@ svg {
                 margin-left: 3px;
             }
         }
-
-        .lineWrap {
-            position: relative;
-            display: block;
-            max-width: unset !important;
-        }
-        .inlineWrap {
-            position: relative;
-            display: inline-block;
-            max-width: unset !important;
-        }
     }
 
     .inputBox {
@@ -211,6 +200,27 @@ svg {
             justify-content: space-between;
             align-items: center;
             gap: 12px;
+        }
+    }
+
+    .lineWrap {
+        position: relative;
+        display: block;
+        max-width: unset !important;
+    }
+    .inlineWrap {
+        position: relative;
+        display: inline-block;
+        max-width: unset !important;
+
+        .word {
+            float: left;
+            line-height: 0.7em;
+            margin-top: 0.1em;
+
+            &:not(:first-child) {
+                margin-left: 0.21em;
+            }
         }
     }
 }
